# chronicle7

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.txt  embed_file.py  sonar-project.properties
.sonarlint/: chronicle7.slconfig  (+3 more)
src/: CMakeLists.txt  Locator.h  Memory.cc  main.cc  pch.cc  pch.h
src/Assets/: MeshAsset.cc  MeshAsset.h  TextureAsset.cc  TextureAsset.h
src/Platform/: App.cc  App.h
src/Renderer/: CommandBuffer.cc  CommandBuffer.h  CommandBufferI.h  Common.h  DescriptorSet.cc  DescriptorSet.h  DescriptorSetI.h  Fence.cc  Fence.h  FenceI.h  Image.cc  Image.h  ImageI.h  ImageInfo.h  IndexBuffer.cc  IndexBuffer.h  IndexBufferI.h  Pipeline.cc  Pipeline.h  PipelineI.h  PipelineInfo.h  RenderPass.cc  RenderPass.h  RenderPassI.h  RenderPassInfo.h  Renderer.cc  Renderer.h  RendererError.h  RendererI.h  Semaphore.cc  Semaphore.h  SemaphoreI.h  VertexBuffer.cc  VertexBuffer.h  VertexBufferI.h  VertexBufferInfo.h
src/Renderer/Vulkan/: Vulkan.h  VulkanBuffer.cc  VulkanBuffer.h  VulkanCommandBuffer.cc  VulkanCommandBuffer.h  VulkanCommon.h  VulkanDescriptorSet.cc  VulkanDescriptorSet.h  VulkanFence.cc  VulkanFence.h  VulkanImage.cc  VulkanImage.h  VulkanImageUtils.cc  VulkanImageUtils.h  VulkanIndexBuffer.cc  VulkanIndexBuffer.h  VulkanInstance.cc  VulkanInstance.h  VulkanPipeline.cc  VulkanPipeline.h  VulkanRenderPass.cc  VulkanRenderPass.h  VulkanRenderer.cc  VulkanRenderer.h  VulkanSemaphore.cc  VulkanSemaphore.h  VulkanUtils.cc  VulkanVertexBuffer.cc  VulkanVertexBuffer.h
src/Shaders/: triangle.vert
src/Storage/: File.cc
src/Systems/: EndRenderSystem.h  MeshRenderSystem.cc  MeshRenderSystem.h  MeshRendererSystem.cc  MeshRendererSystem.h  System.h  Systems.h
src/core/: CMakeLists.txt  Chronicle.cpp  Chronicle.h  pch.cc  pch.cpp  pch.h
src/core/Assets/: AssetLoader.cc  AssetLoader.h  CMakeLists.txt  Material.cc  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshAsset.cc  MeshAsset.h  ShaderAsset.cc  ShaderAsset.h  TextureAsset.cc  TextureAsset.h
src/core/Assets/old/: MeshAsset.cpp  MeshAsset.h  TextureAsset.cc  TextureAsset.h
src/core/Common/: CMakeLists.txt  Common.h  EventDispatcher.h  Log.h  Utils.h
src/core/Graphics/: BindGroup.h  BindGroupLayout.h  Buffer.h  CMakeLists.txt  CommandEncoder.h  Common.h  Device.h  PipelineLayout.h  Sampler.h  ShaderModule.h  System.h  Texture.h  TextureView.h
src/core/Graphics/Interfaces/: CMakeLists.txt  ISystem.h
src/core/Graphics/Vulkan/: CMakeLists.txt  VulkanBindGroup.cpp  VulkanBindGroup.h  VulkanBindGroupLayout.cpp  VulkanBindGroupLayout.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandEncoder.cpp  VulkanCommandEncoder.h  VulkanCommon.h  VulkanDevice.cpp  VulkanDevice.h  VulkanPipelineLayout.cpp  VulkanPipelineLayout.h  VulkanSampler.cpp  VulkanSampler.h  VulkanShaderModule.cpp  VulkanShaderModule.h  VulkanSystem.cpp  VulkanSystem.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTextureView.cpp  VulkanTextureView.h
src/core/Gui/: Common.h  Gui.cpp  Gui.h
src/core/Loaders/: AssetLoader.cc  AssetLoader.cpp  AssetLoader.h  CMakeLists.txt  PipelineLoader.cpp  PipelineLoader.h  ShaderLoader.cc  ShaderLoader.cpp  ShaderLoader.h
src/core/Platform/: CMakeLists.txt  Common.h  Platform.h  PlatformI.h  Window.h
src/core/Platform/GLFW/: CMakeLists.txt  GLFWCommon.h  GLFWPlatform.cc  GLFWPlatform.cpp  GLFWPlatform.h
src/core/Platform/Interfaces/: CMakeLists.txt  IPlatform.h  IWindow.h
src/core/Platform/Win32/: CMakeLists.txt  Win32Platform.cpp  Win32Platform.h  Win32Window.cpp  Win32Window.h
src/core/Renderer/: BaseCommandBuffer.h  BaseDescriptorSetOld.h  BaseFrameBuffer.h  BaseIndexBuffer.h  BasePipeline.h  BaseRenderContext.h  BaseRenderPass.h  BaseShader.h  BaseShaderCompiler.h  BaseTexture.h  BaseVertexBuffer.h  CMakeLists.txt  CommandBufferI.h  Common.h  DescriptorSetI.h  DescriptorSetLayout.h  Enums.h  FenceI.h  FrameBufferI.h  FrameBufferInfo.h  ImageI.h  ImageInfo.h  IndexBufferI.h  MaterialI.h  MeshI.h  PipelineI.h  PipelineInfo.h  RenderContextI.h  RenderPassI.h  RenderPassInfo.h  Renderer.h  RendererError.h  RendererI.h  SemaphoreI.h  ShaderCompilerI.h  ShaderI.h  TextureI.h  TextureInfo.h  VertexBufferI.h  VertexBufferInfo.h  (+1 more)
src/core/Renderer/Common/: CMakeLists.txt  Common.h  Enums.h
src/core/Renderer/Data/: CMakeLists.txt  DescriptorSetLayout.h  FrameBufferInfo.h  PipelineInfo.h  RenderPassInfo.h  ShaderInfo.h  TextureInfo.h  VertexBufferInfo.h
src/core/Renderer/Vulkan/: CMakeLists.txt  VulkanCommandBuffer.cc  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommon.h  VulkanDescriptorSet.cc  VulkanDescriptorSet.h  VulkanDescriptorSetOld.cpp  VulkanDescriptorSetOld.h  VulkanEnums.h  VulkanEvents.h  VulkanExtensions.h  VulkanFence.cc  VulkanFence.h  VulkanFrameBuffer.cc  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  VulkanGC.h  VulkanImGui.cc  VulkanImGui.cpp  VulkanImGui.h  VulkanImage.cc  VulkanImage.h  VulkanIndexBuffer.cc  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanInstance.cc  VulkanInstance.cpp  VulkanInstance.h  VulkanMaterial.cc  VulkanMaterial.h  VulkanMesh.cc  VulkanMesh.h  VulkanPipeline.cc  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderContext.cpp  VulkanRenderContext.h  VulkanRenderPass.cc  VulkanRenderPass.cpp  (+22 more)
src/core/Resources/: MaterialPbr.glsl
src/core/Shaders/: MaterialPbr.glsl  MaterialPbr.hlsl
src/core/Storage/: CMakeLists.txt  Common.h  File.cc  File.cpp  File.h  Storage.cc  Storage.cpp  Storage.h  StorageContext.cpp  StorageContext.h
src/core/Storage/Internal/: CMakeLists.txt  FileWatcherListener.cpp  FileWatcherListener.h  InternalStorageContext.h
src/core/Systems/: MeshRenderSystem.cc  Systems.h
src/core/Utils/: CMakeLists.txt  Camera.cc  Camera.cpp  Camera.h  Scene.cc  Scene.cpp  Scene.h
src/editor/: CMakeLists.txt  MainWindow.cc  MainWindow.cpp  MainWindow.h  Resources.h  main.cc  main.cpp
src/editor/Widgets/: DockArea.cc  DockArea.cpp  DockArea.h  DockPanel.cpp  DockPanel.h
src/example/: CMakeLists.txt  main.cc  main.cpp  pch.h
src/example/Shaders/: triangle.frag  triangle.frag.hlsl  triangle.vert  triangle.vert.hlsl
(+1 files in other folders)
